--- a/templates/main.html
+++ b/templates/main.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{% url 'login' %}">Inicia Sesion</a></li>
+                        <li><a href="{% url 'login' %}">Iniciar Sesion</a></li>
                         <li><a href="{% url 'register' %}">Registrate</a></li>
                     </ul>
                 </div>
