--- a/templates/main.html
+++ b/templates/main.html
@@ -34,7 +34,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="{% url 'login' %}">Iniciar Sesion</a></li>
-                        <li><a href="{% url 'register' %}">Registrate</a></li>
+                        <li><a href="{% url 'register' %}">Registrar</a></li>
                     </ul>
                 </div>
 
