--- a/eWalletRepository/templates/main.html
+++ b/eWalletRepository/templates/main.html
@@ -33,8 +33,8 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{% url 'login' %}">Iniciar Sesion</a></li>
-                        <li><a href="{% url 'register' %}">Registrate</a></li>
+                        <li><a href="{% url 'login' %}">Iniciar Cuenta</a></li>
+                        <li><a href="{% url 'register' %}">Registrar</a></li>
                     </ul>
                 </div>
 
